tests/macros/tests/ui/err/properties-value-non-string.rs
use fastrace::trace;

#[trace(properties = { "key": true })]
fn f() {}

fn main() {}
